--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bulma": "^0.6.1",
+    "firebase": "^4.9.0",
     "font-awesome": "^4.7.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
