--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "firebase": "^4.9.0",
     "font-awesome": "^4.7.0",
     "react": "^16.2.0",
+    "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
