major rebuild with material firebase and mongo

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,12 @@
     "prettier"
   ],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "max-len": [
+      "warn",
+      {
+        "code": 80
+      }
+    ]
   }
 }
