--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-swipeable-views": "^0.13.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "superagent": "^4.0.0-beta.5",
     "thunk": "0.0.1"
   },
   "scripts": {
