--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.0.1",
     "@material-ui/icons": "^3.0.1",
+    "ajv": "^6.5.4",
     "firebase": "^5.4.2",
     "font-awesome": "^4.7.0",
     "react": "^16.4.2",
@@ -12,7 +13,7 @@
     "react-firebaseui": "^3.0.7",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
+    "react-scripts": "2.0.3",
     "react-swipeable-views": "^0.13.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
