--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
   },
   "devDependencies": {
     "prettier": "1.14.2"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
