--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.0.1",
-    "@material-ui/icons": "^3.0.1",
-    "ajv": "^6.5.4",
-    "firebase": "^5.4.2",
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
+    "ajv": "^6.10.2",
+    "firebase": "^7.2.1",
     "font-awesome": "^4.7.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-firebaseui": "^3.0.7",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.3",
-    "react-swipeable-views": "^0.13.0",
-    "redux": "^4.0.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-firebaseui": "^4.0.0",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-swipeable-views": "^0.13.3",
+    "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "superagent": "^4.0.0-beta.5",
+    "superagent": "^5.1.0",
     "thunk": "0.0.1"
   },
   "scripts": {
@@ -29,7 +29,7 @@
     "precommit": "pretty-quick --staged"
   },
   "devDependencies": {
-    "prettier": "1.14.2"
+    "prettier": "1.18.2"
   },
   "browserslist": [
     ">0.2%",
